--- a/package.json
+++ b/package.json
@@ -6,9 +6,25 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.14.0",
+    "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.4.1",
+    "html-to-draftjs": "^1.5.0",
+    "moment": "^2.29.4",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
+    "react-canvas-nest": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^2.8.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.32.8",
+    "tsparticles": "^2.8.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -34,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^1.0.6",
+    "react-router-dom": "^5.2.0"
   }
 }
